--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     },
     "require": {
         "monolog/monolog": "^1.23",
-        "mouyong/foundation": "^1.0"
+        "mouyong/foundation": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.3",
